# fragmend

./: README.md  pyproject.toml
src/meta/: lang_resourcedness.csv
src/xtokenization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xtokenization/configs/: filepaths.py  langid2language.py  param_list.py
src/xtokenization/helpers/Tokens2Words/: README.md  requirements.txt
src/xtokenization/helpers/Tokens2Words/demos/: patchscopes_app.py
src/xtokenization/helpers/Tokens2Words/scripts/: run_expansion_estimation.sh
src/xtokenization/helpers/Tokens2Words/src/tokens2words/: processor.py  representation_translator.py  run_new_vocab_success_estimate.py  run_patchscopes.py  run_vocab_expansion_eval.py  vocab_modifier.py  word_retriever.py
src/xtokenization/helpers/Tokens2Words/src/tokens2words/analysis/: identified_in_patchscopes.py
src/xtokenization/helpers/Tokens2Words/src/tokens2words/experiments/detokenization/: tokens_aggregation.py  utils.py  word_retrieval_multi_tokens.py  word_retrieval_seperations.py  word_retrieval_typos.py
src/xtokenization/helpers/Tokens2Words/src/tokens2words/utils/: bits_per_byte.py  calibration_old.py  calibration_utils.py  data_utils.py  enums.py  eval_utils.py  file_utils.py  logit_lens.py  model_utils.py  subword_utils.py
src/xtokenization/helpers/Tokens2Words/src/tokens2words/utils/procrustes/: orthogonal.py
src/xtokenization/helpers/Tokens2Words/word_lists/: top_5k_hebrew_words_without_nikud.txt
src/xtokenization/utils/: download_glot500c.py  download_glot500c.sh
